fix(footer): hide menu scrollbar

--- a/src/app/layout/footer/footer.component.scss
+++ b/src/app/layout/footer/footer.component.scss
@@ -22,3 +22,7 @@
 	max-width: 100vw;
 	padding: 0 10px 5px 10px;
 }
+::-webkit-scrollbar {
+	width: 0;
+	background: transparent;
+}
